--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
       </div>
       <div class="right-section">
         <div class="headphone-div">
-          <img src="./images/discount.svg" alt="discount" class="discount" />
-          <div class="discount-content">
+          <img class="head" src="./images/discount.svg" alt="discount" class="discount" />
+          
             <h4>Discount</h4>
             <h1>50%</h1>
-          </div>
-          <img src="./images/headphones.jpg" alt="headphone" />
+          <img class="hp" src="./images/headphones.jpg" alt="headphone" />
         </div>
         <div class="dots">
           <div class="dot yellow-dot"></div>
